WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93994
[BlackBerry] Fix use of endsWith to use string instead of char.
https://bugs.webkit.org/show_bug.cgi?id=93994
Summary
[BlackBerry] Fix use of endsWith to use string instead of char.
Mike Fenton
Reported
2012-08-14 10:25:33 PDT
SSIA.
Attachments
Patch
(1.99 KB, patch)
2012-08-14 10:26 PDT
,
Mike Fenton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Fenton
Comment 1
2012-08-14 10:26:45 PDT
Created
attachment 158363
[details]
Patch
WebKit Review Bot
Comment 2
2012-08-14 11:24:10 PDT
Comment on
attachment 158363
[details]
Patch Clearing flags on attachment: 158363 Committed
r125584
: <
http://trac.webkit.org/changeset/125584
>
WebKit Review Bot
Comment 3
2012-08-14 11:24:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug