[BlackBerry] Fix use of endsWith to use string instead of char. https://bugs.webkit.org/show_bug.cgi?id=93994

Reviewed by Antonio Gomes.

Regex comparison should use string instead of char comparison.

* WebKitSupport/DOMSupport.cpp:
(BlackBerry::WebKit::DOMSupport::elementPatternMatches):


Canonical link: https://commits.webkit.org/111851@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125584 268f45cc-cd09-0410-ab3c-d52691b4dbfc